--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "node server.js",
+    "build": "vue-cli-service build",
     "dev": "vite --host",
-    "build": "vite build",
     "preview": "vite preview --host",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
@@ -20,7 +21,8 @@
     "vue-i18n": "^9.9.0",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
